--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 
 <body>
     <div id="main" class="row w-100">
-        <div id="leftPanel" class="col-6 d-flex flex-column ps-4 align-items-center">
-            <h2> Data Visulization </h2>
-            <canvas id="datacanvas" width="800" height="800" class="m-2"></canvas>
+        <div id="leftPanel" class="col-6 d-flex flex-column mt-4 ps-4 pe-4 align-items-end">
+            <canvas id="datacanvas" width="800" height="800"></canvas>
             <div class="p-1 border w-75">
-                <label for="classSelector">Point Color:</label>
+                <label for="classSelector">Place point:</label>
                 <select id="classSelector" class="form-select-sm">
                     <option class="color-option" value="0">0</option>
                     <option class="color-option" value="1">1</option>
@@ -69,22 +68,19 @@
             </div>
         </div>
 
-        <div id="rightPanel" class="col-6 d-flex flex-column ps-4 align-items-center">
-            <h2> Decision Tree </h2>
+        <div id="rightPanel" class="col-6 d-flex flex-column ps-4 mt-4 pe-4 align-items-start">
             <div id="tree">
             </div>
             <div class="d-flex flex-row">
-                <div id="visualization" class="m-2"></div>
+                <div id="visualization"></div>
                 <canvas id="nodeCanvas" width="150" height="700" class="m-2"></canvas>
             </div>
             <div class="p-1 border w-75 d-flex flex-row">
-                <div class="p-1 border">
-                    <div>Accuracy: <span id="accuracy">0.00</span></div>
-                    <div>F1 score: <span id="f1Score">0.00</span></div>
-                </div>
+                <div class="p-1 border">Accuracy: <span id="accuracy">0.00</span></div>
+                <div class="ms-1 p-1 border">F1 score: <span id="f1Score">0.00</span></div>
             </div>
 
-            <div class="p-1 border w-75">
+            <div class="p-1 border w-75" id="rightPanelFooter">
                 <button class="btn btn-secondary" type="button" data-bs-toggle="collapse"
                     data-bs-target="#hyperparametersBlock" aria-expanded="false" aria-controls="hyperparametersBlock">
                     Hyperparameters
